Replace raw foreign key value in bookmarks with primary descriptors

--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -20,7 +20,7 @@
       <tr>
         <td><%= bookmark.user.created_at %></td>
         <td><%= bookmark.venue.name %></td>
-        <td><%= bookmark.dish_id %></td>
+        <td><%= bookmark.dish.cuisine %></td>
         <td><%= bookmark.notes %></td>
         <td>
           <a href="/bookmarks/<%= bookmark.id %>" class="btn btn-primary">Show</a>
