--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -18,7 +18,7 @@
 
       <% @bookmarks.each do |bookmark| %>
       <tr>
-        <td><%= bookmark.user_id %></td>
+        <td><%= bookmark.user.created_at %></td>
         <td><%= bookmark.venue_id %></td>
         <td><%= bookmark.dish_id %></td>
         <td><%= bookmark.notes %></td>
